--- a/app/src/main/res/layout/activity_cat_caramelos.xml
+++ b/app/src/main/res/layout/activity_cat_caramelos.xml
@@ -28,7 +28,7 @@
 
 
             <Button
-                android:id="@+id/btn_iniciot"
+                android:id="@+id/btn_inicio"
                 android:layout_width="64dp"
                 android:layout_height="55dp"
                 android:layout_marginRight="18dp"
@@ -59,7 +59,7 @@
                 android:textColor="#000"></Button>
 
             <Button
-                android:id="@+id/btn_carritot"
+                android:id="@+id/btn_carrito"
                 android:layout_width="66dp"
                 android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
@@ -81,7 +81,7 @@
 
 
             <Button
-                android:id="@+id/btn_inicio"
+                android:id="@+id/btn_ofertas"
                 android:layout_width="wrap_content"
                 android:layout_height="55dp"
                 android:layout_marginTop="4dp"
@@ -92,7 +92,7 @@
                 android:textColor="#000"></Button>
 
             <Button
-                android:id="@+id/btn_perfil"
+                android:id="@+id/btn_categorias"
                 android:layout_width="wrap_content"
                 android:layout_height="54dp"
                 android:layout_marginTop="4dp"
