--- a/app/src/main/res/layout/activity_detalle_producto.xml
+++ b/app/src/main/res/layout/activity_detalle_producto.xml
@@ -28,7 +28,7 @@
 
 
             <Button
-                android:id="@+id/btn_iniciot"
+                android:id="@+id/btn_inicio"
                 android:layout_width="64dp"
                 android:layout_height="55dp"
                 android:layout_marginRight="18dp"
@@ -59,7 +59,7 @@
                 android:textColor="#000"></Button>
 
             <Button
-                android:id="@+id/btn_carritot"
+                android:id="@+id/btn_carrito"
                 android:layout_width="66dp"
                 android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
@@ -100,7 +100,7 @@
             android:layout_gravity="center"></android.widget.NumberPicker>
 
         <Button
-            android:id="@+id/inciar_sesion"
+            android:id="@+id/agregar_car"
             android:layout_width="249dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
